--- a/public/html/disclaimer.html
+++ b/public/html/disclaimer.html
@@ -8,7 +8,7 @@
 <body>
     <header class="header">
         <div class="content">
-            <div class="tworpus"><a href="../index.html">Tworpus</a></div>
+            <div class="tworpus"><a href="http://localhost:3000/">Tworpus</a></div>
         </div>
     </header>
     <div class="about center">
